# VulkanSandbox

./: .ccls  .doxygenConfigFile  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt  cccontrolReminder  convertToVksb.sh  sys
.toolchain/: Cache.cmake  CompilerFlags.cmake  CompilerWarnings.cmake  Dependencies.cmake  Documentation.cmake  PrecompiledHeaders.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  Shaders.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  compile
Shader/: compile.sh
Shader/Fragment/: simple.glsl
Shader/Vertex/: simple.glsl  simple.spv
Shaders/Fragment/: simple.glsl  simple.spv
Shaders/Vertex/: simple.glsl  simple.spv
baseSources/: App.cpp  App.hpp  Device.cpp  Device.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  SwapChain.cpp  SwapChain.hpp  Window.cpp  Window.hpp  first_app.cpp  main.cpp
baseSources/Shader/fragment/: simple.glsl
binaries/: xrnEcs
includes/: Logger.hpp  Logger.impl.hpp  debugMacros.hpp  pch.hpp
oldsources/: App.cpp  App.hpp  Model.cpp  SwapChain.cpp  main.cpp
oldsources/Detail/: Old.hpp
oldsources/Shader/: compile.sh
oldsources/Shader/fragment/: simple.glsl
oldsources/Shader/vertex/: simple.glsl
shaders/: compile.sh
shaders/Fragment/: pointLight.glsl  simple.glsl
shaders/Vertex/: pointLight.glsl  simple.glsl
sources/: .xrnEcsComponentIncluder.impl.hpp  AScene.cpp  AScene.hpp  AScene.impl.hpp  App.cpp  App.hpp  App.impl.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Configuration.hpp  Descriptor.hpp  Device.cpp  Device.hpp  FrameInfo.cpp  FrameInfo.hpp  GameObject.cpp  GameObject.hpp  Hash.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SceneInfo.cpp  SceneInfo.hpp  SwapChain.cpp  SwapChain.hpp  Triangle.hpp  Window.cpp  Window.hpp  main.cpp  pch.hpp
sources/Client/: main.cpp
sources/Component/: Control.cpp  Control.hpp  Controllable.cpp  Controllable.hpp  Transform3d.cpp  Transform3d.hpp  Transformable.cpp  Transformable.hpp
sources/Configuration/: Configuration.cpp  Configuration.hpp  Filepaths.hpp  KeyBindings.hpp
sources/Descriptor/: Pool.cpp  Pool.hpp  SetLayout.cpp  SetLayout.hpp  Writer.cpp  Writer.hpp
sources/Event/: AEvent.cpp  AEvent.hpp  Container.cpp  Container.hpp  KeyPressed.cpp  KeyPressed.hpp  KeyReleased.cpp  KeyReleased.hpp  WindowResize.cpp  WindowResize.hpp
sources/Shader/: Program.cpp  Program.hpp  compile.sh
sources/Shader/Vertex/: simple.glsl
sources/Shader/fragment/: simple.spv
sources/System/: Render.cpp  Render.hpp
sources/Vksb/: AScene.cpp  AScene.hpp  AScene.impl.hpp  App.cpp  App.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Components.hpp  Configuration.hpp  Descriptor.hpp  Device.cpp  Device.hpp  FrameInfo.cpp  FrameInfo.hpp  Hash.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  Ubo.hpp  Window.cpp  Window.hpp  errorToString.hpp
sources/Vksb/Component/: Control.cpp  Control.hpp  PointLight.hpp  Position.cpp  Position.hpp  Rotation.cpp  Rotation.hpp  Scale.cpp  Scale.hpp  Transform3d.cpp  Transform3d.hpp  Types.hpp
sources/Vksb/Configuration/: Configuration.cpp  Configuration.hpp  Filepaths.hpp  KeyBindings.hpp
sources/Vksb/Descriptor/: Pool.cpp  Pool.hpp  SetLayout.cpp  SetLayout.hpp  Writer.cpp  Writer.hpp
sources/Vksb/Event/: AEvent.cpp  Container.cpp  Container.hpp  Container.impl.hpp  KeyPressed.cpp  KeyPressed.hpp  KeyReleased.cpp  KeyReleased.hpp  MouseMoved.cpp  MouseMoved.hpp  WindowResize.cpp  WindowResize.hpp
sources/Vksb/System/: PointLight.cpp  PointLight.hpp  Render.cpp  Render.hpp
sources/xrn/: Util.hpp
sources/xrn/Log/: Logger.hpp
sources/xrn/Util/: Clock.hpp  Time.hpp  Time.impl.hpp
tests/: main.cpp
tests/benchmarks/: main.cpp
tests/fuzz/: CMakeLists.txt
tests/unit/: CMakeLists.txt  main.cpp
tests/unit/basic/: main.cpp
tests/unit/constexpr/: main.cpp
